package edu.fiuba.algo3.modelo.Jugador;

import edu.fiuba.algo3.modelo.Construccion.Construccion;

public class Protoss extends Raza {

    @Override
    public void recolectar() {

    }


}
